--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ header > h3 > a{
 
 main {
     background-color: white;
-    margin: auto 20% auto 20%;
+    margin: 50% 20% auto 20%;
 }
 main > h1{
     font-family: 'Audiowide', cursive;
