--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@ header > h3 > a{
 
 main {
     background-color: white;
-    margin: 50% 20% auto 20%;
+    margin: 12% 20% auto 20%;
+    border-top: 3em;
 }
 main > h1{
     font-family: 'Audiowide', cursive;
