--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ header > h3 > a{
 main {
     background-color: white;
     margin: 13% 20% 20% 20%;
+    padding-top: 3em;
 }
 main > h1{
     font-family: 'Audiowide', cursive;
