--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ header > h3 {
     display: inline-block;
     padding-right: 5%;
     margin-bottom: 0px;
+    border-bottom: 2em;
 }
 header > h3:hover {
     background-color: #6ec52193;
@@ -61,11 +62,11 @@ main {
     background-color: white;
     margin: 13% 20% 20% 20%;
     border-top: 10;
-    
 }
 main > h1{
     font-family: 'Audiowide', cursive;
     color: rgb(48, 193, 48);
+    padding-top: 1%;
 }
 main > h2{
     font-family: 'Audiowide', cursive;
